--- a/ios/FindStuff.xcodeproj/xcshareddata/xcschemes/FindStuff.xcscheme
+++ b/ios/FindStuff.xcodeproj/xcshareddata/xcschemes/FindStuff.xcscheme
@@ -29,9 +29,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "FindStuff.app"
-               BlueprintName = "FindStuff"
-               ReferencedContainer = "container:FindStuff.xcodeproj">
+               BuildableName = "returnup.app"
+               BlueprintName = "returnup"
+               ReferencedContainer = "container:returnup.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -45,7 +45,7 @@
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
                BuildableName = "FindStuffTests.xctest"
                BlueprintName = "FindStuffTests"
-               ReferencedContainer = "container:FindStuff.xcodeproj">
+               ReferencedContainer = "container:returnup.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -63,7 +63,7 @@
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
                BuildableName = "FindStuffTests.xctest"
                BlueprintName = "FindStuffTests"
-               ReferencedContainer = "container:FindStuff.xcodeproj">
+               ReferencedContainer = "container:returnup.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -71,9 +71,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "FindStuff.app"
-            BlueprintName = "FindStuff"
-            ReferencedContainer = "container:FindStuff.xcodeproj">
+            BuildableName = "returnup.app"
+            BlueprintName = "returnup"
+            ReferencedContainer = "container:returnup.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -94,9 +94,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "FindStuff.app"
-            BlueprintName = "FindStuff"
-            ReferencedContainer = "container:FindStuff.xcodeproj">
+            BuildableName = "returnup.app"
+            BlueprintName = "returnup"
+            ReferencedContainer = "container:returnup.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -113,9 +113,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "FindStuff.app"
-            BlueprintName = "FindStuff"
-            ReferencedContainer = "container:FindStuff.xcodeproj">
+            BuildableName = "returnup.app"
+            BlueprintName = "returnup"
+            ReferencedContainer = "container:returnup.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
