--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -79,7 +79,7 @@ project.ext.react = [
     entryFile: "index.js",
     enableHermes: false,  // clean and rebuild if changing
 
-    // bundleInDebug: true,    
+    bundleInDebug: true,    
     // devDisabledInDebug: true
 
     // bundleInRelease: true
