--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -79,13 +79,15 @@ project.ext.react = [
     entryFile: "index.js",
     enableHermes: false,  // clean and rebuild if changing
 
-    bundleInDebug: true,    
+    // bundleInDebug: true,    
     // devDisabledInDebug: true
 
     // bundleInRelease: true
 ]
 
-apply from: "../../node_modules/react-native/react.gradle"
+project.ext.vectoricons = [
+    iconFontNames: [ 'MaterialIcons.ttf', 'EvilIcons.ttf' ] // Name of the font files you want to copy
+]
 
 /**
  * Set this to true to create two separate APKs instead of one:
@@ -232,5 +234,7 @@ task copyDownloadableDepsToLibs(type: Copy) {
     into 'libs'
 }
 
+apply from: "../../node_modules/react-native/react.gradle"
+apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); 
 applyNativeModulesAppBuildGradle(project)
